All settings should now stop being cut off on Res over 1024x768

--- a/css/static_widget.css
+++ b/css/static_widget.css
@@ -4,7 +4,7 @@ body {
 	font-size:12px;
 	line-height:140%;
 	color: #666666;
-	height: 100%;
+	height: 94%;
 	margin: 22 0;
 }
 .widget {
